2/28/18 v23 - All math for the simulation has been rewritten in an equal area projection. Also adds spatial debuggin features. \n
1/9/18 v22 - Both results pages are cleaned up and the only unfinished section is the Surrounding Area Depletion chart. \n
1/6/18 v21c - Additional bugfixes for the import system. \n
1/4/18 v21b - More minor bugfixes to the import system. \n
1/3/18 v21a - Bug fixes for the different population import systems. \n
12/29/17 v21 - Finished adding the population import system and changed the interface for app updates. \n
12/26/17 v20 - Adds a new population type: yearly defined populations. Many change to the backend of how popualtions are stored and additional error handling for population input and validation. \n
12/19/17 v19b - More bug fixes and changed persist save copy behavior to be more intuitive. \n
12/18/17 v19a - Minor bug fixes and added validation of all parameters. \n
12/17/17 v19 - Large UI changes which use the materialize library much more heavily. Also starts to add tooltips and confirmation dialogs. \n
12/2/17 v18a - More ways of communicating with the worker and started output page redesign. Some save features still broken. \n
11/29/17 v18 - First multithreaded version with working web worker. Also adds support for Bing map satellite data. \n
11/20/17 v17b - Additional fixes and work on the output page. \n
11/17/17 v17a - More work to results pages and first working graph. \n
11/15/17 v17 - Autosave system is working and has an interface. Last major feature to work on is the output page. \n
10/26/17 v16a - More cleanup and a few tests for the persistent storage system. \n
10/25/17 v16 - Massive backend changes to how all population data is stored and move around. Fixes using the table, allows the simulation to run offline, save/load system is much more functional and other backend cleanup. \n