@@ -187,6 +187,14 @@
                                         <div id="popMapContent" class="hide" style="height: 80%; width: 100%;">
                                                 <div class="row">
                                                         <div class="col s9"><i>Click on the map to add a population to that location. Click on an existing population to edit it.</i></div>
+                                                        <div class="switch">
+                                                                <label>
+                                                                        Arial Map
+                                                                        <input type="checkbox" checked="false" onchange="changeMapView(this.checked)" id="mapTypeToggle">
+                                                                        <span class="lever"></span>
+                                                                        Road Map
+                                                                </label>
+                                                        </div>
                                                 </div>
                                                 <div class="divider" style="margin-bottom: 4px;"></div>
                                                 <div class="row" id="popMapRow">
@@ -419,17 +427,29 @@
                                 </li>
                                 <li class="collection-item">
                                         <div class="row" style="margin-bottom: 0;">
-                                                <div class="col s8"><h5>Heatmap base color:</h5></div>
+                                                <div class="col s8"><h5>Heatmap Saturated Color:</h5></div>
                                                 <div class="col s1"><input type="color" value="#ffeda0" style="margin-top: 6px;" id="paramLowColor"></div>
-                                                <div class="col s2"><a class="btn waves-effect waves-light" onclick="resetColorCode(0);">Default</a></div>
+                                                <div class="col s2"><a class="btn waves-effect waves-light" onclick="resetColorCode('low');">Reset</a></div>
                                                 <div class="col s1"><a class="btn-floating waves-effect waves-light tooltipped" data-position="left" data-delay="50" data-tooltip="Color of the undepleted end of the heatmap gradient."><i>?</i></a></div>
                                         </div>
                                 </li>
                                 <li class="collection-item">
                                         <div class="row" style="margin-bottom: 0;">
-                                                <div class="col s8"><h5>Heatmap Depleted color:</h5></div>
+                                                <div class="col s6"><h5>Heatmap Mid Color (Optional):</h5></div>
+                                                <div class="col s2" style="margin-top: 6px;">
+                                                        <input type="checkbox" id="enable3ColorMode" onchange="toggleThirdColorMode(this.checked)"/>
+                                                        <label for="enable3ColorMode">Enabled</label>
+                                                </div>
+                                                <div class="col s1"><input type="color" value="#ffeda0" style="margin-top: 6px;" id="paramMidColor"></div>
+                                                <div class="col s2"><a class="btn waves-effect waves-light" onclick="resetColorCode('mid');" id="midColorReset">Reset</a></div>
+                                                <div class="col s1"><a class="btn-floating waves-effect waves-light tooltipped" data-position="left" data-delay="50" data-tooltip="Color of the undepleted end of the heatmap gradient."><i>?</i></a></div>
+                                        </div>
+                                </li>
+                                <li class="collection-item">
+                                        <div class="row" style="margin-bottom: 0;">
+                                                <div class="col s8"><h5>Heatmap Depleted Color:</h5></div>
                                                 <div class="col s1"><input type="color" value="#f03b20" style="margin-top: 6px;" id="paramHighColor"></div>
-                                                <div class="col s2"><a class="btn waves-effect waves-light" onclick="resetColorCode(1);">Default</a></div>
+                                                <div class="col s2"><a class="btn waves-effect waves-light" onclick="resetColorCode('high');">Reset</a></div>
                                                 <div class="col s1"><a class="btn-floating waves-effect waves-light tooltipped" data-position="left" data-delay="50" data-tooltip="Color of the depleted end of the heatmap gradient."><i>?</i></a></div>
                                         </div>
                                 </li>
