@@ -1,5 +1,5 @@
 CACHE MANIFEST
-# manifest v23
+# manifest v24
 
 CACHE:
 index.html
